finishing Status Section(need more update), add Banner Section, Grid -> Flexbox

--- a/index.html
+++ b/index.html
@@ -26,14 +26,25 @@
             <hr style="margin-top: 5px; width: 90%; border: 1px solid var(--text);">
         </div>
         <div id="skillSet">
-
+            <div class="skill">
+                <span>HTML %</span>
+                <div class="skillMeter"><div style="width: 80%;"></div></div>
+                <hr style="width: 90%; border: 1px solid var(--text);">
+                <span>JavaScript %</span>
+                <div class="skillMeter"><div style="width: 40%;"></div></div>
+                <hr style="width: 90%; border: 1px solid var(--text);">
+                <span>CSS %</span>
+                <div class="skillMeter"><div style="width: 60%;"></div></div>
+                <hr style="width: 90%; border: 1px solid var(--text);">
+            </div>
         </div>
     </section>
-    <section id="banner-section">
-
-    </section>
-    <section id="content-section">
-
+    <section id="sider">
+        <section id="banner-section">
+        </section>
+        <section id="content-section">
+    
+        </section>
     </section>
 
     <script src="src/script.js"></script>
