adding Show-Case section to Content Section

--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
                 <span>CSS %</span>
                 <div class="skillMeter"><div style="width: 60%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
+                <span>Music Producing %</span>
+                <div class="skillMeter"><div style="width: 30%;"></div></div>
+                <hr style="width: 90%; border: 1px solid var(--text);">
             </div>
         </div>
     </section>
     <section id="sider">
-        <section id="banner-section">
-        </section>
+        <section id="banner-section"></section>
         <section id="content-section">
-    
+            <div id="show-case">
+            </div>
         </section>
     </section>
 
