--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masagus - WebPage</title>
     <link rel="stylesheet" href="/src/style.css">
+    <script src="https://kit.fontawesome.com/29575beb59.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <section id="status-section">
-        <div id="profile">
+        <div id="profile" onload="playAnimation(showVisible)">
             <a href="#profile"><img src="src/img/photo-profile.png" alt="Photo Profile"></a>
         </div>
         <div id="myInfo">
@@ -28,16 +29,16 @@
         <div id="skillSet">
             <div class="skill">
                 <span>HTML %</span>
-                <div class="skillMeter"><div style="width: 80%;"></div></div>
+                <div class="skillMeter"><div style="--target:80%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
                 <span>JavaScript %</span>
-                <div class="skillMeter"><div style="width: 40%;"></div></div>
+                <div class="skillMeter"><div style="--target: 40%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
                 <span>CSS %</span>
-                <div class="skillMeter"><div style="width: 60%;"></div></div>
+                <div class="skillMeter"><div style="--target: 60%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
                 <span>Music Producing %</span>
-                <div class="skillMeter"><div style="width: 30%;"></div></div>
+                <div class="skillMeter"><div style="--target: 30%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
             </div>
         </div>
@@ -45,7 +46,10 @@
     <section id="sider">
         <section id="banner-section"></section>
         <section id="content-section">
-            <div id="show-case">
+            <div class="showCase webShowCase">
+            </div>
+            <hr style="margin-block: 10px; width: 100%; border: 1px solid var(--main-2);">
+            <div class="showCase musicShowCase">
             </div>
         </section>
     </section>
