--- a/index.html
+++ b/index.html
@@ -40,11 +40,23 @@
                 <span>Music Producing %</span>
                 <div class="skillMeter"><div style="--target: 30%;"></div></div>
                 <hr style="width: 90%; border: 1px solid var(--text);">
+                <span>IoT %</span>
+                <div class="skillMeter"><div style="--target: 80%;"></div></div>
+                <hr style="width: 90%; border: 1px solid var(--text);">
             </div>
         </div>
     </section>
     <section id="sider">
-        <section id="banner-section"></section>
+        <section id="banner-section">
+            <div class="counter">
+                <h1 id="website-counter">0</h1>
+                <h2>Website</h2>
+            </div>
+            <div class="counter">
+                <h1 id="music-counter">0</h1>
+                <h2>Music</h2>
+            </div>
+        </section>
         <section id="content-section">
             <div class="showCase webShowCase">
             </div>
