--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+    <section id="nav-section">
+        <button type="button" onclick="nav()" id="navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <a class="navLinks" href="#web-showcase"><i class="fa-solid fa-globe"></i></a>
+        <a class="navLinks" href="#music-showcase"><i class="fa-solid fa-music"></i></a>
+    </section>
     <section id="status-section">
         <div id="profile" onload="playAnimation(showVisible)">
             <a href="#profile"><img src="src/img/photo-profile.png" alt="Photo Profile"></a>
@@ -58,10 +65,10 @@
             </div>
         </section>
         <section id="content-section">
-            <div class="showCase webShowCase">
+            <div class="showCase webShowCase" id="web-showcase">
             </div>
             <hr style="margin-block: 10px; width: 100%; border: 1px solid var(--main-2);">
-            <div class="showCase musicShowCase">
+            <div class="showCase musicShowCase" id="music-showcase">
             </div>
         </section>
     </section>
