adding Footer Section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,31 @@
             <div class="showCase musicShowCase" id="music-showcase">
             </div>
         </section>
+        <section id="footer-section">
+            <div class="leftFooter footerDiv">
+                <h2>Follow Me on Social Media</h2>
+                <ul>
+                    <a href="https://www.instagram.com/msgs_adra?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://soundcloud.com/masagus-ahmad-ramadhan?utm_source=mobi&utm_campaign=social_sharing&si=ff4ee19b41244b33bae5bc222281bf66"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/Ashonst2844"><i class="fa-brands fa-soundcloud"></i></a>
+                </ul>
+            </div>
+            <div class="rightFooter footerDiv">
+                <div>
+                    <h2>Contact Me</h2>
+                    <ul>
+                        <li>+62858-9129-9147</li>
+                        <li>agusyantosugiyanto@gmail.com</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Cooming Soon Project</h2>
+                </div>
+            </div>
+            <div class="copyrightFooter">
+                <span>Copyright &copy; 2026, Masagus Ahmad Ramadhan</span>
+            </div>
+        </section>
     </section>
 
     <script src="src/script.js"></script>
