refactoring Skill Section

--- a/index.html
+++ b/index.html
@@ -34,25 +34,7 @@
             </div>
             <hr style="margin-top: 5px; width: 90%; border: 1px solid var(--text);">
         </div>
-        <div id="skillSet">
-            <div class="skill">
-                <span>HTML %</span>
-                <div class="skillMeter"><div style="--target:80%;"></div></div>
-                <hr style="width: 90%; border: 1px solid var(--text);">
-                <span>JavaScript %</span>
-                <div class="skillMeter"><div style="--target: 40%;"></div></div>
-                <hr style="width: 90%; border: 1px solid var(--text);">
-                <span>CSS %</span>
-                <div class="skillMeter"><div style="--target: 60%;"></div></div>
-                <hr style="width: 90%; border: 1px solid var(--text);">
-                <span>Music Producing %</span>
-                <div class="skillMeter"><div style="--target: 30%;"></div></div>
-                <hr style="width: 90%; border: 1px solid var(--text);">
-                <span>IoT %</span>
-                <div class="skillMeter"><div style="--target: 80%;"></div></div>
-                <hr style="width: 90%; border: 1px solid var(--text);">
-            </div>
-        </div>
+        <div id="skillSet"></div>
     </section>
     <section id="sider">
         <section id="banner-section">
@@ -66,11 +48,9 @@
             </div>
         </section>
         <section id="content-section">
-            <div class="showCase webShowCase" id="web-showcase">
-            </div>
+            <div class="showCase webShowCase" id="web-showcase"></div>
             <hr style="margin-block: 10px; width: 100%; border: 1px solid var(--main-2);">
-            <div class="showCase musicShowCase" id="music-showcase">
-            </div>
+            <div class="showCase musicShowCase" id="music-showcase"></div>
         </section>
         <section id="footer-section">
             <div class="leftFooter footerDiv">
