add sider button to hide/show sider

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <a class="navLinks" href="#web-showcase"><i class="fa-solid fa-globe"></i></a>
         <a class="navLinks" href="#music-showcase"><i class="fa-solid fa-music"></i></a>
     </section>
+    <div id="sider-control">
+        <button onclick="sider()" type="button">
+            <i class="fa-solid fa-angle-right"></i>
+        </button>
+    </div>
     <section id="status-section">
-        <div onclick="personal()" id="profile" onload="playAnimation(showVisible)">
+        <div id="profile" onload="playAnimation(showVisible)">
             <img src="src/img/photo-profile.png" alt="Photo Profile">
         </div>
         <div id="myInfo">
