adding Landing Section and make sider static

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button type="button" onclick="nav()" id="navigation">
             <i class="fa-solid fa-bars"></i>
         </button>
-        <a class="navLinks" href="#banner-section"><i class="fa-solid fa-house"></i></a>
+        <a class="navLinks" href="#home-section"><i class="fa-solid fa-house"></i></a>
         <a class="navLinks" href="#web-showcase"><i class="fa-solid fa-globe"></i></a>
         <a class="navLinks" href="#music-showcase"><i class="fa-solid fa-music"></i></a>
     </section>
@@ -42,6 +42,22 @@
         <div id="skillSet"></div>
     </section>
     <section id="sider">
+        <section id="home-section">
+            <div class="catalogue">
+                <h1>Masagus Ahmad Ramadhan</h1>
+                <span>I am:</span>
+                <ul>
+                    <li>Music Producer</li>
+                    <li>Web Developer</li>
+                    <li>Math Anthusiast</li>
+                    <li>Tech Anthusiast</li>
+                    <li>Noob Guitaris</li>
+                    <li>Etc.</li>
+                </ul>
+                <a href="#banner-section">See More!</a>
+            </div>
+            <div class="landingImage"></div>
+        </section>
         <section id="banner-section">
             <div class="counter">
                 <h1 id="website-counter">0</h1>
